MeetingAwareDiscovery test scenario

--- a/config.json
+++ b/config.json
@@ -1,3 +1,10 @@
 {
-  "DENIM_ZOOKEEPER_HOSTS": "10.5.7.149"
+  "ZOOKEEPER_HOSTS": "10.5.7.149",
+  "MY_NODE_IP": "10.5.7.149",
+  "MY_PORT": 8000,
+  "EXECUTION": {
+    "INTERVAL": 1000,
+    "PER_INTERVAL": 100,
+    "N_INTERVAL": 10000
+  }
 }
