--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "dependencies": {
+    "bluebird": "^3.1.5",
     "mkdirp": "^0.5.1",
     "nconf": "^0.6.9",
     "node-zookeeper-client": "^0.2.2",
